--- a/Gnoquis/Base.lproj/Main.storyboard
+++ b/Gnoquis/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RGo-5p-OJH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -79,6 +79,7 @@
                                             <outlet property="iconoImg" destination="Jfr-Gd-Muo" id="d3E-v2-aDC"/>
                                             <outlet property="nameLabel" destination="Uzo-En-ciz" id="0lo-LZ-aGp"/>
                                             <outlet property="professionLabel" destination="IeP-5H-6Qb" id="M9g-ui-6d7"/>
+                                            <segue destination="Cmb-we-8vC" kind="show" identifier="showGnoquiDetail" id="tfv-xj-6xg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -91,13 +92,116 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="aRK-g3-TX2"/>
                     <connections>
                         <outlet property="tableView" destination="yJn-th-Bu0" id="HuJ-tM-OXa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="612" y="138.98050974512745"/>
+        </scene>
+        <!--Gnoqui Detail View Controller-->
+        <scene sceneID="3RY-Db-sp8">
+            <objects>
+                <viewController id="Cmb-we-8vC" customClass="GnoquiDetailViewController" customModule="Gnoquis" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sux-6T-UtX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c8t-uv-Go9">
+                                <rect key="frame" x="16" y="64" width="343" height="260"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="260" id="fUS-Vp-e0N"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iaN-fA-FXS">
+                                <rect key="frame" x="16" y="324" width="343" height="343"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="2zz-v7-53u" customClass="GnoquiDetailTableViewCell" customModule="Gnoquis" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2zz-v7-53u" id="FBM-Pw-xSN">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXd-yt-0Dk">
+                                                    <rect key="frame" x="8" y="1" width="335" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="G9C-tH-iJ4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carpintero, albañil, Herrero, Maestro, Cristalero " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfb-mo-M3n">
+                                                    <rect key="frame" x="8" y="21" width="335" height="56"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="cXd-yt-0Dk" secondAttribute="trailing" id="0bs-dW-svs"/>
+                                                <constraint firstItem="cXd-yt-0Dk" firstAttribute="trailing" secondItem="gfb-mo-M3n" secondAttribute="trailing" id="6P2-zU-qCp"/>
+                                                <constraint firstItem="cXd-yt-0Dk" firstAttribute="top" secondItem="FBM-Pw-xSN" secondAttribute="topMargin" constant="-7" id="Lrx-V5-8k1"/>
+                                                <constraint firstItem="gfb-mo-M3n" firstAttribute="top" secondItem="cXd-yt-0Dk" secondAttribute="bottom" id="bVr-qb-8pp"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gfb-mo-M3n" secondAttribute="bottom" constant="-5.5" id="n1X-fM-F61"/>
+                                                <constraint firstItem="cXd-yt-0Dk" firstAttribute="leading" secondItem="FBM-Pw-xSN" secondAttribute="leadingMargin" id="ouT-Ja-dv5"/>
+                                                <constraint firstItem="cXd-yt-0Dk" firstAttribute="leading" secondItem="gfb-mo-M3n" secondAttribute="leading" id="xQO-Ho-xUa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="campoLabel" destination="cXd-yt-0Dk" id="E81-dj-ecq"/>
+                                            <outlet property="valorLabel" destination="gfb-mo-M3n" id="qpJ-EW-hWq"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Cmb-we-8vC" id="0Kf-84-zGF"/>
+                                    <outlet property="delegate" destination="Cmb-we-8vC" id="j4j-in-Ixa"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c8t-uv-Go9" firstAttribute="top" secondItem="0gk-TV-pNn" secondAttribute="top" id="1nZ-JF-qbp"/>
+                            <constraint firstItem="c8t-uv-Go9" firstAttribute="trailing" secondItem="Sux-6T-UtX" secondAttribute="trailingMargin" id="BS0-om-5Wa"/>
+                            <constraint firstItem="iaN-fA-FXS" firstAttribute="bottom" secondItem="0gk-TV-pNn" secondAttribute="bottom" id="aYY-sm-aCT"/>
+                            <constraint firstItem="c8t-uv-Go9" firstAttribute="trailing" secondItem="iaN-fA-FXS" secondAttribute="trailing" id="heU-nM-gvB"/>
+                            <constraint firstItem="c8t-uv-Go9" firstAttribute="leading" secondItem="iaN-fA-FXS" secondAttribute="leading" id="j8P-iu-pAw"/>
+                            <constraint firstItem="iaN-fA-FXS" firstAttribute="top" secondItem="c8t-uv-Go9" secondAttribute="bottom" id="p9h-Jt-tIr"/>
+                            <constraint firstItem="c8t-uv-Go9" firstAttribute="leading" secondItem="Sux-6T-UtX" secondAttribute="leadingMargin" id="xsg-Ja-F5r"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0gk-TV-pNn"/>
+                    </view>
+                    <connections>
+                        <outlet property="iconoImg" destination="c8t-uv-Go9" id="hsA-D2-shy"/>
+                        <outlet property="tableView" destination="iaN-fA-FXS" id="Qeq-7q-qT1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BeF-cv-4jl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1544.8" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="92N-YB-h19">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RGo-5p-OJH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JAe-Ts-bpc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="1xa-WR-aON"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zlb-PU-tgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-146" y="139"/>
         </scene>
     </scenes>
 </document>
