--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -35,44 +35,45 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jfr-Gd-Muo">
-                                                    <rect key="frame" x="24" y="9" width="60" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="nEO-qn-7gB"/>
-                                                    </constraints>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="30"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uzo-En-ciz">
                                                     <rect key="frame" x="100" y="9" width="267" height="28"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="28" id="NxU-P0-x7g"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profession" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeP-5H-6Qb">
-                                                    <rect key="frame" x="100" y="41" width="267" height="36"/>
+                                                    <rect key="frame" x="100" y="41" width="267" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="18" id="511-7V-He2"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jfr-Gd-Muo">
+                                                    <rect key="frame" x="8" y="8" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="dte-Bm-B3Q"/>
+                                                        <constraint firstAttribute="width" constant="70" id="pH3-RZ-YPY"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="35"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" constant="1" id="8w3-5w-d0A"/>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="centerY" secondItem="wHz-uO-MbQ" secondAttribute="centerY" id="BjE-A6-gjM"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="IeP-5H-6Qb" secondAttribute="trailing" id="JpY-lo-rVp"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="IeP-5H-6Qb" secondAttribute="bottom" constant="-5.5" id="PoL-gV-rhl"/>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="leading" secondItem="wHz-uO-MbQ" secondAttribute="leadingMargin" constant="16" id="cwY-Hq-8dm"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="Jfr-Gd-Muo" secondAttribute="trailing" constant="16" id="hIf-ll-Syq"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="IeP-5H-6Qb" secondAttribute="leading" id="hwV-B4-R61"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="wHz-uO-MbQ" secondAttribute="trailingMargin" id="jU3-qX-Xw6"/>
-                                                <constraint firstItem="IeP-5H-6Qb" firstAttribute="top" secondItem="Uzo-En-ciz" secondAttribute="bottom" constant="4" id="jh1-T2-acy"/>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="top" secondItem="Uzo-En-ciz" secondAttribute="top" id="oK3-YR-Hko"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="IeP-5H-6Qb" secondAttribute="leading" id="4V0-Jd-6Fe"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="IeP-5H-6Qb" secondAttribute="bottom" constant="12.5" id="4lb-rK-Ncd"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="IeP-5H-6Qb" secondAttribute="trailing" id="8zw-io-gJl"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" constant="1" id="D0O-sY-2Zo"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Jfr-Gd-Muo" secondAttribute="bottom" constant="-6.5" id="E7x-3y-uAA"/>
+                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" id="Qmv-iK-tK7"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="wHz-uO-MbQ" secondAttribute="trailingMargin" id="SId-nG-cAS"/>
+                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="leading" secondItem="wHz-uO-MbQ" secondAttribute="leadingMargin" id="YRs-SN-mZb"/>
+                                                <constraint firstItem="IeP-5H-6Qb" firstAttribute="top" secondItem="Uzo-En-ciz" secondAttribute="bottom" constant="4" id="ct0-mc-pbl"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="Jfr-Gd-Muo" secondAttribute="trailing" constant="22" id="qGV-B4-AAJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
