--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -24,9 +24,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yJn-th-Bu0">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yJn-th-Bu0">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="4Rn-fW-ma1" customClass="GnoquiTableViewCell" customModule="Gnoquis" customModuleProvider="target">
@@ -89,6 +88,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="yJn-th-Bu0" secondAttribute="trailing" id="0EU-Zw-1Ra"/>
+                            <constraint firstItem="yJn-th-Bu0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="AV5-VL-bRm"/>
+                            <constraint firstItem="yJn-th-Bu0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UQ0-kD-yYY"/>
+                            <constraint firstItem="yJn-th-Bu0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="co1-Js-u2a"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Gnoquis" id="aRK-g3-TX2">
@@ -201,10 +206,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfN-Dw-6bv">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfN-Dw-6bv">
                                 <rect key="frame" x="62" y="76" width="250" height="540"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.33333333329999998" green="0.31764705879999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="540" id="R9n-0w-GXb"/>
+                                    <constraint firstAttribute="width" constant="250" id="qma-Ga-ZfI"/>
+                                </constraints>
                                 <color key="sectionIndexBackgroundColor" red="0.78431372549019607" green="0.85882352941176465" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="60" id="9Ay-A2-hXt" customClass="MenuViewControllerTableViewCell" customModule="Gnoquis" customModuleProvider="target">
@@ -214,13 +222,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="250" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jzR-r3-oUf">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jzR-r3-oUf">
                                                     <rect key="frame" x="8" y="4" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="ywi-LR-Eus"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0g4-de-FgP">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0g4-de-FgP">
                                                     <rect key="frame" x="66" y="4" width="164" height="48"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                                     <state key="normal" title="Button"/>
                                                     <connections>
@@ -229,6 +238,15 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0g4-de-FgP" firstAttribute="leading" secondItem="jzR-r3-oUf" secondAttribute="trailing" constant="8" symbolic="YES" id="7OF-5P-Y7D"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0g4-de-FgP" secondAttribute="bottom" constant="-0.5" id="G3D-Nw-gnH"/>
+                                                <constraint firstItem="jzR-r3-oUf" firstAttribute="top" secondItem="XNr-Do-sEm" secondAttribute="topMargin" constant="-4" id="MJC-2p-O4F"/>
+                                                <constraint firstItem="jzR-r3-oUf" firstAttribute="centerY" secondItem="XNr-Do-sEm" secondAttribute="centerY" id="aXv-XS-aDA"/>
+                                                <constraint firstItem="jzR-r3-oUf" firstAttribute="top" secondItem="0g4-de-FgP" secondAttribute="top" id="b3a-od-bFf"/>
+                                                <constraint firstItem="jzR-r3-oUf" firstAttribute="leading" secondItem="XNr-Do-sEm" secondAttribute="leadingMargin" id="r1H-5e-EaE"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0g4-de-FgP" secondAttribute="trailing" constant="12" id="uwk-gf-saQ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.78431372549019607" green="0.85882352941176465" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
@@ -242,9 +260,12 @@
                                     <outlet property="delegate" destination="THi-h7-l0t" id="lcA-OG-3zO"/>
                                 </connections>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88J-ku-qOw">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88J-ku-qOw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="Ah1-m7-7Bw"/>
+                                    <constraint firstAttribute="height" constant="44" id="r0M-wf-0FR"/>
+                                </constraints>
                                 <items>
                                     <navigationItem title="Gnoquis Filters" id="8Zr-1h-Uao">
                                         <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="o3u-Cb-PCW">
@@ -256,6 +277,16 @@
                                 </items>
                             </navigationBar>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="88J-ku-qOw" firstAttribute="centerX" secondItem="AfN-Dw-6bv" secondAttribute="centerX" id="3cZ-OZ-wIE"/>
+                            <constraint firstItem="88J-ku-qOw" firstAttribute="leading" secondItem="DVY-Yx-QyE" secondAttribute="leading" id="TKD-YA-aWH"/>
+                            <constraint firstItem="jND-Ca-XMz" firstAttribute="bottom" secondItem="AfN-Dw-6bv" secondAttribute="bottom" constant="51" id="Wor-rm-uJ6"/>
+                            <constraint firstItem="88J-ku-qOw" firstAttribute="top" secondItem="DVY-Yx-QyE" secondAttribute="top" id="gvb-Nu-8Of"/>
+                            <constraint firstItem="AfN-Dw-6bv" firstAttribute="leading" secondItem="jND-Ca-XMz" secondAttribute="leading" constant="62" id="m8v-Bh-kqa"/>
+                            <constraint firstAttribute="trailing" secondItem="88J-ku-qOw" secondAttribute="trailing" id="rqE-VE-AsU"/>
+                            <constraint firstItem="88J-ku-qOw" firstAttribute="trailing" secondItem="jND-Ca-XMz" secondAttribute="trailing" id="tAb-Wj-Z7A"/>
+                            <constraint firstItem="88J-ku-qOw" firstAttribute="top" secondItem="DVY-Yx-QyE" secondAttribute="top" id="wxm-AV-Mi1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="jND-Ca-XMz"/>
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="238" height="360"/>
@@ -277,9 +308,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9PO-l9-iCx">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9PO-l9-iCx">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="B27-t9-iBW"/>
+                                    <constraint firstAttribute="height" constant="44" id="rMI-fr-91i"/>
+                                </constraints>
                                 <items>
                                     <navigationItem title="About Gnoquis" id="rVP-uF-QpG">
                                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="22a-nv-WgU">
@@ -290,20 +324,37 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
                                 <rect key="frame" x="16" y="231" width="343" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.91502082371725624" blue="0.56435120131284244" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rcosin_02" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rcosin_02" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
                                 <rect key="frame" x="67" y="67" width="240" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="156" id="ORM-f8-37J"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eik-HG-aeL" firstAttribute="leading" secondItem="KuS-8e-fWg" secondAttribute="leadingMargin" id="09b-tQ-1Ml"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="centerX" secondItem="kKd-37-SYy" secondAttribute="centerX" id="AHq-am-VJD"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="top" secondItem="KuS-8e-fWg" secondAttribute="top" id="Abx-Ii-dbq"/>
+                            <constraint firstItem="kKd-37-SYy" firstAttribute="top" secondItem="9PO-l9-iCx" secondAttribute="bottom" constant="23" id="Q62-1h-kAd"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="leading" secondItem="Zxl-se-DmU" secondAttribute="leading" id="Qfi-xp-K2M"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="top" secondItem="KuS-8e-fWg" secondAttribute="top" id="Sb0-K5-rTn"/>
+                            <constraint firstAttribute="trailing" secondItem="9PO-l9-iCx" secondAttribute="trailing" id="T2e-hV-kXK"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="trailing" secondItem="Zxl-se-DmU" secondAttribute="trailing" id="WyJ-4n-46z"/>
+                            <constraint firstItem="9PO-l9-iCx" firstAttribute="leading" secondItem="KuS-8e-fWg" secondAttribute="leading" id="XNa-en-0Qy"/>
+                            <constraint firstItem="kKd-37-SYy" firstAttribute="leading" secondItem="Zxl-se-DmU" secondAttribute="leading" constant="67" id="aWA-Gb-yUS"/>
+                            <constraint firstAttribute="bottom" secondItem="eik-HG-aeL" secondAttribute="bottom" constant="20" symbolic="YES" id="dBZ-vg-Uyg"/>
+                            <constraint firstItem="eik-HG-aeL" firstAttribute="top" secondItem="kKd-37-SYy" secondAttribute="bottom" constant="8" symbolic="YES" id="o78-Hx-gZQ"/>
+                            <constraint firstItem="kKd-37-SYy" firstAttribute="top" secondItem="9PO-l9-iCx" secondAttribute="bottom" constant="23" id="x0G-eL-IHN"/>
+                            <constraint firstItem="kKd-37-SYy" firstAttribute="centerX" secondItem="eik-HG-aeL" secondAttribute="centerX" id="z1P-VI-CeD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Zxl-se-DmU"/>
                     </view>
                     <connections>
